# dungeons_of_ufeff

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  attribution.txt  controls.txt  license.txt  readme.md
assets/: amalgamation.xcf  amalgamation_backup.xcf  dialogue_background.xcf  dialogue_leftright.xcf  dialogue_topbottom.xcf  lava_base.xcf  lava_blend.xcf  mask.xcf  water_base.xcf  water_foam.xcf  waterfall.xcf
assets/extra/: resources.rc
assets/maps/: amalgamation.tsx  east_tower_basement.tmx  hub.tmx  lair.tmx  sanctum.tmx
assets/models/: bf_dungeon.blend  bf_lair.blend  bf_sanctum.blend
scripts/: blender_export.py  tiled2map.py
src/: animation.hpp  animation_data.cpp  animation_data.hpp  audio.cpp  audio.hpp  battle_field_renderer.cpp  battle_field_renderer.hpp  battle_object_renderer.cpp  battle_object_renderer.hpp  bmfont.cpp  bmfont.hpp  camera.cpp  camera.hpp  dialoguebox.cpp  dialoguebox.hpp  direction.hpp  foam_emitter.hpp  game.cpp  game.hpp  gamestate.hpp  global_services.cpp  global_services.hpp  imm_renderer.cpp  imm_renderer.hpp  main.cpp  mathutil.hpp  npc.cpp  npc.hpp  obj_loader.hpp  pathfinding.hpp  quad_renderer.cpp  quad_renderer.hpp  random.cpp  random.hpp  random_vec.hpp  rectangle.hpp  screen_renderer.cpp  screen_renderer.hpp  shader.hpp  spritebatch.cpp  (+29 more)
src/battle/: battle_camera.hpp  battle_character.cpp  battle_character.hpp  battle_character_info.cpp  battle_character_info.hpp  battle_field.hpp  battle_fx.hpp  battle_particle.hpp  battle_projectile.hpp  controller.cpp  controller.hpp  encounters.cpp  encounters.hpp  skill.cpp  skill.hpp
